--- a/sunclock1/app/src/main/res/values/strings.xml
+++ b/sunclock1/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">tau clock</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="location_category_title">Location</string>
+    <string name="provider_title">Location Provider</string>
+    <string name="manual_location_title">Manual Location</string>
+
+    <string name="timezone_category_title">Time</string>
+    <string name="timezone_title">Timezone Provider</string>
+    <string name="manual_timezone_title">Manual GMT Offset</string>
+
+    <string name="date_category_title">Date</string>
+    <string name="date_title">Date Provider</string>
+    <string name="manual_date_title">Manual Date Offset</string>
 </resources>
